--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This is my first website project",
   "main": "index.js",
   "author": "Pawan Asati",
+  "type": "commonjs",
   "license": "MIT",
   "scripts": {
     "dev": "nodemon -r esm server.js",
