--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js  --config=node_modules/laravel-mix/setup/webpack.config.js"
-
   },
   "dependencies": {
     "alert": "^5.1.4",
@@ -32,7 +31,8 @@
     "mongoose": "^6.9.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "toast-me": "^1.4.14"
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
